# AlterHook

./: .clang-format  .gitignore  .gitmodules  .markdownlint.yml  CMakeAndroidPresets.json  CMakeLinuxPresets.json  CMakeLists.txt  CMakePresets.json  CMakeWindowsPresets.json  Doxyfile  LICENSE  README.md  output.txt
.github/workflows/: cmake-multi-platform.yml
Visual Studio/AlterHookAndroid/: AlterHookAndroid.vcxproj
Visual Studio/AlterHookAndroid/dynamic/: AlterHookAndroid.vcxproj  AlterHookAndroid.vcxproj.filters
Visual Studio/AlterHookWindows/dynamic/: AlterHookWindows.vcxproj  AlterHookWindows.vcxproj.filters  cpp.hint
docs/: addresser.md  exception_groups.md  exceptions.md  hook.hook_chain.md  hook.md  hook_chain.md  hook_map.md  iterators.hook_chain.md  trampoline.md
headers/: arm64_instructions.h  arm_instructions.h  buffer.h  disassembler.h  injection.h  linux_thread_handler.h  windows_thread_handler.h  x86_instructions.h
headers/AArch64/: instructions.h
headers/ARM/: instructions.h
headers/linux/: thread_handler.h
include/: addresser.h  alterhook.h  api.h  exceptions.h  tools.h
include/alterhook/: addresser.h  alterhook.h  api.h  exceptions.h  hook.h  hook_chain.h  hook_map.h  macros.h  modifier.h  tools.h  trampoline.h
include/alterhook/detail/: constants.h  macros.h
include/alterhook/utilities/: adapters.h  boilerplate.h  calling_conventions.h  concepts.h  data_processing.h  function_traits.h  index_sequence.h  other.h  properties.h  static_vector.h  template_string.h  type_name.h  type_sequence.h  utils.h  utils_macros.h
pre-compiled headers/android/: pch.h
pre-compiled headers/linux/: pch.h
pre-compiled headers/windows/: pch.h
scripts/: TargetArch.cmake  install_compiler.sh
src/: addresser.cpp  api.cpp  buffer.cpp  hook.cpp  hook_chain.cpp  misc.cpp  other.cpp
src/AArch64/: injection.cpp  trampoline.cpp
src/ARM/: exceptions.cpp  injection.cpp  thread_processing.cpp  trampoline.cpp
src/ARM-AArch64/: thread_processing.cpp
src/ARM64/: injection.cpp  trampoline.cpp
src/X86/: injection.cpp  thread_processing.cpp  trampoline.cpp
src/android/: other.cpp  trampoline.cpp
src/headers/: api.h  arm_disassembler.h  arm_instructions.h  buffer.h  disassembler.h  exceptions.h  linux_thread_handler.h  macros.h  tools.h
src/headers/utilities/: calling_conventions.h  function_traits.h  other.h  static_vector.h  template_string.h  type_sequence.h  utils.h  utils_macros.h
src/linux/: allocation.cpp  exceptions.cpp  freezer.cpp  other.cpp
src/windows/: allocation.cpp  exceptions.cpp  freezer.cpp  other.cpp
tests/: .clang-format  CMakeLists.txt  hook_chains.cpp  hook_maps.cpp  hooks.cpp  modifiers.cpp  modifiers.h  testcls.h
tests/AArch64/: trampolines.cpp  trampolines.h
tests/ARM/: trampoline_target_tests.h  trampolines.cpp  trampolines.h  trampolines_general.h
vs/android/: AlterHookShared.vcxproj  AlterHookShared.vcxproj.filters  AlterHookStatic.vcxproj  AlterHookStatic.vcxproj.filters
vs/windows/: AlterHookShared.vcxproj  AlterHookShared.vcxproj.filters  AlterHookStatic.vcxproj  AlterHookStatic.vcxproj.filters
